--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,31 +9,22 @@
   <link rel="stylesheet" href="src/css/style.css">
   <link rel="stylesheet" href="src/css/silverBox.css">
 </head>
+
 <body>
-  <div id="container">
-    <button id="menu">menu</button>
-    <div id="box">
-      <div class="news">
-        <h4>title</h4>
-        <div>
-          <h5>auther : </h5>
-          <h5>date : </h5>
-        </div>
-      </div>
+  <button id="newsCreateor">new</button>
+  <h1>welcome to news generator</h1>
+  <section id="menu">
+    <input type="text" name="" placeholder="search news..." id="input-fliter">
+    <a href="news.html">
+    <div class="menu-item">
+      <p class="menu-item-title">title</p>
+      <p class="menu-item-auther">auther</p>
+      <p class="menu-item-date">date</p>
     </div>
-    <main>
-      <button id="newBtn" type="button">new</button>
-      <h1>welcome to news website</h1>
-    </main>
-    <div id="comment">
-      <form>
-        <input placeholder="enter your email" id="commentEmail" type="email">
-        <input placeholder="enter your name" id="commentEmail" type="text">
-        <input placeholder="enter your comment" id="commentEmail" type="text">
-        <button id="sendCommentBtn" type="button">send comment</button>
-      </form>
-    </div>
-  </div>
+    </a>
+  </section>
+  <script type="module" src="/src/js/findNews.js"></script>
   <script type="module" src="./src/js/main.js"></script>
 </body>
+
 </html>
