Build : add news maker and read news

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-  <button id="newsCreateor">new</button>
   <h1>welcome to news generator</h1>
+  <button id="newsCreateor">new</button>
   <section id="menu">
     <input type="text" name="" placeholder="search news..." id="input-fliter">
     <a href="news.html">
@@ -23,6 +23,9 @@
     </div>
     </a>
   </section>
+
+  <script type="module" src="/src/js/showData.js"></script>
+
   <script type="module" src="/src/js/findNews.js"></script>
   <script type="module" src="./src/js/main.js"></script>
 </body>
