--- a/news.html
+++ b/news.html
@@ -21,6 +21,14 @@
       <p class="menu-item-date">date</p>
     </div>
   </section>
+  <section id="description-menu">
+    <h1 id="title"></h1>
+    <div id="description"></div>
+    <p id="auther"></p>
+    <p id="date"></p>
+  </section>
+  <script type="module" src="src/js/showNews.js"></script>
+  <script type="module" src="/src/js/showData.js"></script>
   <script type="module" src="/src/js/findNews.js"></script>
   <script type="module" src="./src/js/main.js"></script>
 </body>
