--- a/index.html
+++ b/index.html
@@ -4,29 +4,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>news</title>
+  <title id="websiteTitle">news</title>
   <link rel="stylesheet" href="src/css/responsiv.css">
   <link rel="stylesheet" href="src/css/style.css">
   <link rel="stylesheet" href="src/css/silverBox.css">
 </head>
 
 <body>
-  <h1>welcome to news generator</h1>
-  <button id="newsCreateor">new</button>
   <section id="menu">
     <input type="text" name="" placeholder="search news..." id="input-fliter">
-    <a href="news.html">
-    <div class="menu-item">
+    <!-- <div class="menu-item">
       <p class="menu-item-title">title</p>
-      <p class="menu-item-auther">auther</p>
+      <p class="menu-item-author">author</p>
       <p class="menu-item-date">date</p>
-    </div>
-    </a>
+      </div> -->
   </section>
+  <section id="main">
+    <h1 id="welcome">welcome to news generator</h1>
+    <button id="newsCreator">new</button>
+    <div id="newsContant">
+      <p id="newsTitle"></p>
+      <p id="newsDec">
 
-  <script type="module" src="/src/js/showData.js"></script>
+      </p>
+      <div id="newsDetails">
+        <p id="newsAuthor"></p>
+        <p id="newsDate"></p>
+      </div>
 
-  <script type="module" src="/src/js/findNews.js"></script>
+      <div id="commentsContainr">
+        <form>
+          <input type="text" id="authorComment" placeholder="Enter your Name">
+          <input type="email" id="authorEmail" placeholder="Enter your Email">
+          <textarea id="comment" type="text" placeholder="Enter your comment"></textarea>
+          <button id="sendBtn" type="button">Send</button>
+        </form>
+        <div id="comments">
+          
+        </div>
+      </div>
+    </div>
+  </section>
   <script type="module" src="./src/js/main.js"></script>
 </body>
 
