Feat : add ckeditor to project

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </section>
   <section id="main">
     <h1 id="welcome">welcome to news generator</h1>
-    <button id="newsCreator">new</button>
+    <button id="newsCreatorBtn">new</button>
     <div id="newsContant">
       <p id="newsTitle"></p>
       <p id="newsDec">
