Feat : change ui

--- a/newsCreator.html
+++ b/newsCreator.html
@@ -19,7 +19,7 @@
             <div id="editor">
             </div>
         </div>
-        <button id="submit">Create</button>
+        <button id="submit"><a>Create</a></button>
     </div>
     <script src="src/js/ckeditor.js"></script>
     <script type="module" src="src/js/editor.js"></script>
